--- a/CdsHelper.Form/Themes/Views/CdsHelperWindow.xaml
+++ b/CdsHelper.Form/Themes/Views/CdsHelperWindow.xaml
@@ -53,6 +53,8 @@
 
     <Style TargetType="{x:Type views:CdsHelperWindow}">
         <Setter Property="Title" Value="{Binding WindowTitle}" />
+        <Setter Property="Width" Value="1024" />
+        <Setter Property="Height" Value="640" />
         <Setter Property="Background" Value="#F5F5F5" />
         <Setter Property="BorderBrush" Value="#104F89"/>
         <Setter Property="BorderThickness" Value="1"/>
